Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNhpXKh7B1RJZhBJRM+l8cR",
+      "authorship_tag": "ABX9TyOCds4Av56UPypJoZt0sONV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3436,7 +3436,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3459,7 +3459,7 @@
       "source": [
         "!g++ array01.cpp -o array01; ./array01"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3474,10 +3474,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JickdBaumMKJ",
-        "outputId": "467b6a90-ed3b-4771-a706-9816b8781631",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "467b6a90-ed3b-4771-a706-9816b8781631"
       },
       "source": [
         "%%writefile array02.cpp\n",
@@ -3493,7 +3493,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3508,15 +3508,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "xME08Ssamati",
-        "outputId": "cf1d4218-8898-435f-fd95-dc996d7a64bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cf1d4218-8898-435f-fd95-dc996d7a64bb"
       },
       "source": [
         "!g++ array02.cpp -o array02; ./array02"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3531,10 +3531,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-8spDgtFmnW7",
-        "outputId": "37b40f82-6402-4dbe-d323-2e8d61fa0914",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "37b40f82-6402-4dbe-d323-2e8d61fa0914"
       },
       "source": [
         "%%writefile array03.cpp\n",
@@ -3551,7 +3551,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3566,15 +3566,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "jy8wA-48mq-n",
-        "outputId": "ce5e25fd-ca5d-4eea-eaa1-b0f66f58c1e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ce5e25fd-ca5d-4eea-eaa1-b0f66f58c1e1"
       },
       "source": [
         "!g++ array03.cpp -o array03; ./array03"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3592,10 +3592,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "nJ5zPLrsm1z1",
-        "outputId": "d25827b6-5f6d-4411-86f7-ebf000c782d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d25827b6-5f6d-4411-86f7-ebf000c782d5"
       },
       "source": [
         "%%writefile array04.cpp\n",
@@ -3611,7 +3611,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3626,15 +3626,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "BVbo7l6km5T1",
-        "outputId": "b0bb4346-2a00-4372-a594-f53ded392680",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b0bb4346-2a00-4372-a594-f53ded392680"
       },
       "source": [
         "!g++ array04.cpp -o array04; ./array04"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3652,10 +3652,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Sy8xPThGnpbg",
-        "outputId": "4c31f104-6515-42fd-ae26-5a5453c3d426",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4c31f104-6515-42fd-ae26-5a5453c3d426"
       },
       "source": [
         "%%writefile array05.cpp\n",
@@ -3674,7 +3674,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3689,15 +3689,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "GIVj0MYAnswK",
-        "outputId": "042b3701-56d8-4824-d8c8-39e94e16c46f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "042b3701-56d8-4824-d8c8-39e94e16c46f"
       },
       "source": [
         "!g++ array05.cpp -o array05; ./array05"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3716,10 +3716,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OSU6Fsxqn5Rs",
-        "outputId": "9a870099-e4cc-45aa-8a8c-8b3e7ba9507c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9a870099-e4cc-45aa-8a8c-8b3e7ba9507c"
       },
       "source": [
         "%%writefile array06.cpp\n",
@@ -3741,7 +3741,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3756,15 +3756,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "T7JATf7Kn9d2",
-        "outputId": "d88b0a43-071f-450b-966a-c93c3ce22904",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d88b0a43-071f-450b-966a-c93c3ce22904"
       },
       "source": [
         "!g++ array06.cpp -o array06; ./array06"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3774,6 +3774,66 @@
             "Ford\n",
             "Mazda\n",
             "Tesla\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-qrghEFlhYhu",
+        "outputId": "a4021832-8a1d-427e-f8ac-61191d66b563",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile reference01.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string food = \"Pizza\";\n",
+        "  string &meal = food;\n",
+        "\n",
+        "  cout << food << \"\\n\";\n",
+        "  cout << meal << \"\\n\";\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing reference01.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KvsgcVGDhmRx",
+        "outputId": "6ba5005d-b987-4645-e7b9-709756d1952f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ reference01.cpp -o reference01; ./reference01"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Pizza\n",
+            "Pizza\n"
           ],
           "name": "stdout"
         }
