Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOCds4Av56UPypJoZt0sONV",
+      "authorship_tag": "ABX9TyPOO5AncRnKtcMN30pdcbpl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3783,10 +3783,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-qrghEFlhYhu",
-        "outputId": "a4021832-8a1d-427e-f8ac-61191d66b563",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a4021832-8a1d-427e-f8ac-61191d66b563"
       },
       "source": [
         "%%writefile reference01.cpp\n",
@@ -3804,7 +3804,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3819,21 +3819,78 @@
       "cell_type": "code",
       "metadata": {
         "id": "KvsgcVGDhmRx",
-        "outputId": "6ba5005d-b987-4645-e7b9-709756d1952f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6ba5005d-b987-4645-e7b9-709756d1952f"
       },
       "source": [
         "!g++ reference01.cpp -o reference01; ./reference01"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Pizza\n",
             "Pizza\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E_KPSSOwigv7",
+        "outputId": "f2c1901a-7fab-4945-ae0e-d90d62f4730f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile reference02.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "int main() {\n",
+        "  string food = \"Pizza\";\n",
+        "\n",
+        "  cout << &food;\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing reference02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2Ifs1iLiimEp",
+        "outputId": "2ee2cb6e-989b-44e9-c324-6914038a6c2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ reference02.cpp -o reference02; ./reference02"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0x7ffe06a85c70"
           ],
           "name": "stdout"
         }
