--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNejFZ8pltB5/XVDQdIWqrm",
+      "authorship_tag": "ABX9TyPqqXKyZE6qJ5JK/J4QYgns",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4048,10 +4048,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "x7KawXfwYjBp",
-        "outputId": "47c05492-c463-4bea-ed8f-e3e360f0d1f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "47c05492-c463-4bea-ed8f-e3e360f0d1f8"
       },
       "source": [
         "%%writefile pointer03.cpp\n",
@@ -4084,7 +4084,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4099,15 +4099,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZC4cYleOS1SI",
-        "outputId": "6aabbc96-318f-4fbb-ce9c-d5bd343714af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6aabbc96-318f-4fbb-ce9c-d5bd343714af"
       },
       "source": [
         "!g++ pointer03.cpp -o pointer03; ./pointer03"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4135,10 +4135,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rjylv-JQTffr",
-        "outputId": "935dc10c-10bf-4bee-e7e5-37b3adca5953",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "935dc10c-10bf-4bee-e7e5-37b3adca5953"
       },
       "source": [
         "%%writefile function01.cpp\n",
@@ -4155,7 +4155,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4170,15 +4170,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "qo1x456fTrAr",
-        "outputId": "b4605751-055b-4d0b-b23d-967cd1cb3747",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b4605751-055b-4d0b-b23d-967cd1cb3747"
       },
       "source": [
         "!g++ function01.cpp -o function01; ./function01"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4192,11 +4192,89 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pGfdsHEgT291"
+        "id": "pGfdsHEgT291",
+        "outputId": "df9ecb9a-bc04-4ad6-ec3e-f168779e222b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile function02.cpp\n",
-        "\n"
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "void myFunction() {\n",
+        "  cout << \"I just got executed!\\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  myFunction();\n",
+        "  myFunction();\n",
+        "  myFunction();\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function02.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3ODx7A603Jl6",
+        "outputId": "13a35eb7-3823-4f92-f7e4-7b6aaa9932c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function02.cpp -o function02; ./function02"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I just got executed!\n",
+            "I just got executed!\n",
+            "I just got executed!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EzMi7lOA3vAf"
+      },
+      "source": [
+        "%%writefile function03.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "// Function declaration\n",
+        "void myFunction();\n",
+        "\n",
+        "// The main method\n",
+        "int main() {\n",
+        "  myFunction();  // call the function\n",
+        "  return 0;\n",
+        "}\n",
+        "\n",
+        "// Function definition\n",
+        "void myFunction() {\n",
+        "  cout << \"I just got executed!\";\n",
+        "}\n"
       ],
       "execution_count": null,
       "outputs": []
