Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPqqXKyZE6qJ5JK/J4QYgns",
+      "authorship_tag": "ABX9TyPlVtn1AdXOOL6fz+gMFgIK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4193,10 +4193,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pGfdsHEgT291",
-        "outputId": "df9ecb9a-bc04-4ad6-ec3e-f168779e222b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "df9ecb9a-bc04-4ad6-ec3e-f168779e222b"
       },
       "source": [
         "%%writefile function02.cpp\n",
@@ -4215,7 +4215,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4230,15 +4230,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "3ODx7A603Jl6",
-        "outputId": "13a35eb7-3823-4f92-f7e4-7b6aaa9932c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "13a35eb7-3823-4f92-f7e4-7b6aaa9932c9"
       },
       "source": [
         "!g++ function02.cpp -o function02; ./function02"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4254,7 +4254,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EzMi7lOA3vAf"
+        "id": "EzMi7lOA3vAf",
+        "outputId": "4f0ad1c2-b3d5-430e-b023-a06094f8c765",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%%writefile function03.cpp\n",
@@ -4276,8 +4280,111 @@
         "  cout << \"I just got executed!\";\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function03.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i5vo6gcf_iac",
+        "outputId": "6d8b38f7-c1ad-4ded-b5dc-e5cdb4d69315",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function03.cpp -o function03; ./function03"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I just got executed!"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PNoSkj5R_y2N",
+        "outputId": "2fa43af2-6712-4b37-dcae-ad2b02c70bcf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function04.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "void myFunction(string fname) {\n",
+        "  cout << fname << \" Refsnes\\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  myFunction(\"Liam\");\n",
+        "  myFunction(\"Jenny\");\n",
+        "  myFunction(\"Anja\");\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function04.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YlH6QCPGAK0R",
+        "outputId": "3ed90136-fdee-4b59-ab4b-4b47f51065af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function04.cpp -o function04; ./function04"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Liam Refsnes\n",
+            "Jenny Refsnes\n",
+            "Anja Refsnes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7HTN_IYM_iKD"
+      },
+      "source": [
+        "# いまここ"
+      ]
     }
   ]
 }
