Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPlVtn1AdXOOL6fz+gMFgIK",
+      "authorship_tag": "ABX9TyO4KHQr+m9X4YW+7MO6GAMC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4255,10 +4255,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EzMi7lOA3vAf",
-        "outputId": "4f0ad1c2-b3d5-430e-b023-a06094f8c765",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f0ad1c2-b3d5-430e-b023-a06094f8c765"
       },
       "source": [
         "%%writefile function03.cpp\n",
@@ -4280,7 +4280,7 @@
         "  cout << \"I just got executed!\";\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4295,15 +4295,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "i5vo6gcf_iac",
-        "outputId": "6d8b38f7-c1ad-4ded-b5dc-e5cdb4d69315",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6d8b38f7-c1ad-4ded-b5dc-e5cdb4d69315"
       },
       "source": [
         "!g++ function03.cpp -o function03; ./function03"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4318,10 +4318,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PNoSkj5R_y2N",
-        "outputId": "2fa43af2-6712-4b37-dcae-ad2b02c70bcf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2fa43af2-6712-4b37-dcae-ad2b02c70bcf"
       },
       "source": [
         "%%writefile function04.cpp\n",
@@ -4341,7 +4341,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4356,15 +4356,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "YlH6QCPGAK0R",
-        "outputId": "3ed90136-fdee-4b59-ab4b-4b47f51065af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3ed90136-fdee-4b59-ab4b-4b47f51065af"
       },
       "source": [
         "!g++ function04.cpp -o function04; ./function04"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4372,6 +4372,309 @@
             "Liam Refsnes\n",
             "Jenny Refsnes\n",
             "Anja Refsnes\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VG7FA6z5ofJ7",
+        "outputId": "7b06e7dc-fdc1-47e6-9ffa-a0897d4c5c17",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function05.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "void myFunction(string country = \"Norway\") {\n",
+        "  cout << country << \"\\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  myFunction(\"Sweden\");\n",
+        "  myFunction(\"India\");\n",
+        "  myFunction();\n",
+        "  myFunction(\"USA\");\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function05.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wJ_FQ-okohmm",
+        "outputId": "cc48ecc4-bba3-488f-b87e-b018cb7858dd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function05.cpp -o function05; ./function05"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sweden\n",
+            "India\n",
+            "Norway\n",
+            "USA\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SPEQWGGTovf4",
+        "outputId": "6998adcf-6448-4dbf-ef13-fcf50a7cca03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function06.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "#include <string>\n",
+        "using namespace std;\n",
+        "\n",
+        "void myFunction(string fname, int age) {\n",
+        "  cout << fname << \" Refsnes. \" << age << \" years old. \\n\";\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  myFunction(\"Liam\", 3);\n",
+        "  myFunction(\"Jenny\", 14);\n",
+        "  myFunction(\"Anja\", 30);\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function06.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c1LJx3ffpCvq",
+        "outputId": "7c161c25-48b9-4ed0-c3a7-a847e21062e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function06.cpp -o function06; ./function06"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Liam Refsnes. 3 years old. \n",
+            "Jenny Refsnes. 14 years old. \n",
+            "Anja Refsnes. 30 years old. \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l1SXzT8MpVy0",
+        "outputId": "126b13ee-9a6c-4bee-f6cf-93775619c245",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function07.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int myFunction(int x) {\n",
+        "  return 5 + x;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  cout << myFunction(3);\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function07.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HTFigBpApWKw",
+        "outputId": "7750a200-e32c-4478-b68a-8178262d85aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function07.cpp -o function07; ./function07"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZVkDUuXnpmbK",
+        "outputId": "5ad03014-49fd-4848-8f40-24d6ddfd1c67",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function08.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int myFunction(int x, int y) {\n",
+        "  return x + y;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  cout << myFunction(5, 3);\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function08.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bGb-iR1GpmKd",
+        "outputId": "ed082be8-5567-4d68-aac8-5335829333e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function08.cpp -o function08; ./function08"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DMfV5zUpptvH",
+        "outputId": "3954d613-e2c5-4808-f617-de5ca52599f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile function09.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int myFunction(int x, int y) {\n",
+        "  return x + y;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  int z = myFunction(5, 3);\n",
+        "  cout << z;\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing function09.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cjORLJfhptjJ",
+        "outputId": "1710f97a-d78a-4895-d5f3-7912867fc472",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ function09.cpp -o function09; ./function09"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8"
           ],
           "name": "stdout"
         }
