Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO4KHQr+m9X4YW+7MO6GAMC",
+      "authorship_tag": "ABX9TyMSfAJPgrcP6voaR8Hv6rJc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4381,10 +4381,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VG7FA6z5ofJ7",
-        "outputId": "7b06e7dc-fdc1-47e6-9ffa-a0897d4c5c17",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b06e7dc-fdc1-47e6-9ffa-a0897d4c5c17"
       },
       "source": [
         "%%writefile function05.cpp\n",
@@ -4405,7 +4405,7 @@
         "  return 0;\n",
         "}"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4420,15 +4420,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "wJ_FQ-okohmm",
-        "outputId": "cc48ecc4-bba3-488f-b87e-b018cb7858dd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cc48ecc4-bba3-488f-b87e-b018cb7858dd"
       },
       "source": [
         "!g++ function05.cpp -o function05; ./function05"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4446,10 +4446,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SPEQWGGTovf4",
-        "outputId": "6998adcf-6448-4dbf-ef13-fcf50a7cca03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6998adcf-6448-4dbf-ef13-fcf50a7cca03"
       },
       "source": [
         "%%writefile function06.cpp\n",
@@ -4469,7 +4469,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4484,15 +4484,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "c1LJx3ffpCvq",
-        "outputId": "7c161c25-48b9-4ed0-c3a7-a847e21062e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7c161c25-48b9-4ed0-c3a7-a847e21062e9"
       },
       "source": [
         "!g++ function06.cpp -o function06; ./function06"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4509,10 +4509,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "l1SXzT8MpVy0",
-        "outputId": "126b13ee-9a6c-4bee-f6cf-93775619c245",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "126b13ee-9a6c-4bee-f6cf-93775619c245"
       },
       "source": [
         "%%writefile function07.cpp\n",
@@ -4529,7 +4529,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4544,15 +4544,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "HTFigBpApWKw",
-        "outputId": "7750a200-e32c-4478-b68a-8178262d85aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7750a200-e32c-4478-b68a-8178262d85aa"
       },
       "source": [
         "!g++ function07.cpp -o function07; ./function07"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4567,10 +4567,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ZVkDUuXnpmbK",
-        "outputId": "5ad03014-49fd-4848-8f40-24d6ddfd1c67",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5ad03014-49fd-4848-8f40-24d6ddfd1c67"
       },
       "source": [
         "%%writefile function08.cpp\n",
@@ -4587,7 +4587,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4602,15 +4602,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "bGb-iR1GpmKd",
-        "outputId": "ed082be8-5567-4d68-aac8-5335829333e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ed082be8-5567-4d68-aac8-5335829333e1"
       },
       "source": [
         "!g++ function08.cpp -o function08; ./function08"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4625,10 +4625,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DMfV5zUpptvH",
-        "outputId": "3954d613-e2c5-4808-f617-de5ca52599f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3954d613-e2c5-4808-f617-de5ca52599f0"
       },
       "source": [
         "%%writefile function09.cpp\n",
@@ -4646,7 +4646,7 @@
         "  return 0;\n",
         "}\n"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4661,15 +4661,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "cjORLJfhptjJ",
-        "outputId": "1710f97a-d78a-4895-d5f3-7912867fc472",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1710f97a-d78a-4895-d5f3-7912867fc472"
       },
       "source": [
         "!g++ function09.cpp -o function09; ./function09"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4678,6 +4678,154 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7_ci617st4bU",
+        "outputId": "e5d7f60e-dec5-4953-b656-faf6a5bf7594",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile passbyreference.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "void swapNums(int &x, int &y) {\n",
+        "  int z = x;\n",
+        "  x = y;\n",
+        "  y = z;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  int firstNum = 10;\n",
+        "  int secondNum = 20;\n",
+        "\n",
+        "  cout << \"Before swap: \" << \"\\n\";\n",
+        "  cout << firstNum << secondNum << \"\\n\";\n",
+        "\n",
+        "  swapNums(firstNum, secondNum);\n",
+        "\n",
+        "  cout << \"After swap: \" << \"\\n\";\n",
+        "  cout << firstNum << secondNum << \"\\n\";\n",
+        "\n",
+        "  return 0;\n",
+        "}\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing passbyreference.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LEzCoNq7t_vZ",
+        "outputId": "f75979ee-bda0-49c4-e26f-e660afd699a9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ passbyreference.cpp -o passbyreference; ./passbyreference"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Before swap: \n",
+            "1020\n",
+            "After swap: \n",
+            "2010\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uloCDtwrumZA",
+        "outputId": "16d411bd-bf41-40c4-dad0-9e13e4340342",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile functionoverloading.cpp\n",
+        "\n",
+        "#include <iostream>\n",
+        "using namespace std;\n",
+        "\n",
+        "int plusFunc(int x, int y) {\n",
+        "  return x + y;\n",
+        "}\n",
+        "\n",
+        "double plusFunc(double x, double y) {\n",
+        "  return x + y;\n",
+        "}\n",
+        "\n",
+        "int main() {\n",
+        "  int myNum1 = plusFunc(8, 5);\n",
+        "  double myNum2 = plusFunc(4.3, 6.26);\n",
+        "  cout << \"Int: \" << myNum1 << \"\\n\";\n",
+        "  cout << \"Double: \" << myNum2;\n",
+        "  return 0;\n",
+        "}"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing functionoverloading.cpp\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ngMHKqjLuoig",
+        "outputId": "dd7ec08c-21f3-43a2-b3f5-5a09711919a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!g++ functionoverloading.cpp -o functionoverloading; ./functionoverloading"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Int: 13\n",
+            "Double: 10.56"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RHI59pg_vRv5"
+      },
+      "source": [
+        "# クラス Class\n"
       ]
     },
     {
